[gd_scene load_steps=6 format=2]

[ext_resource path="res://dialogues/DialoguePlayer.gd" type="Script" id=1]
[ext_resource path="res://resources/ui/dialogue_box.png" type="Texture" id=2]
[ext_resource path="res://resources/fonts/PIXEAB__.TTF" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 3 )

[node name="DialoguePlayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 32.0
margin_top = 128.0
margin_right = 288.0
margin_bottom = 168.0
texture = ExtResource( 2 )
patch_margin_left = 12
patch_margin_top = 9
patch_margin_right = 12
patch_margin_bottom = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="RichTextLabel" parent="NinePatchRect"]
margin_left = 64.0
margin_top = 6.0
margin_right = 333.0
margin_bottom = 53.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/normal_font = SubResource( 1 )
text = "Hello there my name is Haroon"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="RichTextLabel" parent="NinePatchRect"]
margin_left = 5.0
margin_top = 6.0
margin_right = 79.0
margin_bottom = 36.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/normal_font = SubResource( 2 )
text = "Omg name"

[node name="end_dialogue" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="next_char" type="Timer" parent="."]

[connection signal="timeout" from="end_dialogue" to="." method="_on_end_dialogue_timeout"]
[connection signal="timeout" from="end_dialogue" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="next_char" to="." method="_on_next_char_timeout"]
